# orbital-mechanics-engine

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  viewer_config.json
.github/workflows/: ci.yml
docs/: CHECKLIST.md  ROADMAP.md  SETUP.md  architecture.md  design-notes.md  dev-notes.md  orbital_mechanics_engine_cli_reference.md  physics-and-methods.md  validation.md
docs/debug/: debug_list.md
docs/milestones/: ROADMAP_binary_format.md  ROADMAP_horizons_pipeline.md  ROADMAP_python_binding_architecture.md  ROADMAP_refactor_sessions.md  ROADMAP_rk45.md  ROADMAP_visualization_scale_logic.md  fix_data_loading.md  improve_makefile.md
docs/strategy/: community-templates.md  competitive-analysis.md  comprehensive-development-roadmap.md  open-source-growth-plan.md  python-api-strategy.md  readme-enhancement-guide.md  week-1-action-plan.md
examples/: README.md
include/: barycenter.h  body.h  cli.h  conservations.h  eclipse.h  horizons.h  horizons_builder.h  horizons_parser.h  json_loader.h  main.h  ray.h  simulation.h  system_writer.h  utils.h  validate.h  vec3.h
include/viewer/: csv_loader.h  sphere_mesh.h
python/: 3Dexaggerated_plot.py  3Dplot.py  3Dplot_earth_moon.py  3Draytracing.py  angular_momentum_plot.py  compare_integrators.py  energy_conservation.py  fetch_and_build.py  horizons_validation.py  utils.py
results/: test_out.csv
shaders/: earth.frag
src/cli/: cli.cpp  main.cpp
src/core/: barycenter.cpp  conservations.cpp  eclipse.cpp  json_loader.cpp  simulation.cpp
src/io/: horizons.cpp  horizons_builder.cpp  horizons_parser.cpp  system_writer.cpp  validate.cpp
src/viewer/: csv_loader.cpp  orbit_viewer.cpp  sphere_mesh.cpp
systems/: earth_moon_horizons_2025.json
tests/: README.md  test_barycenter.cpp  test_cli.cpp  test_conservation.cpp  test_horizons_parser.cpp  test_leapfrog.cpp  test_system_writer.cpp  test_two_body.cpp
utils/: view.sh
